# cfai-facefusion

./: .gitignore  facefusion.ini  facefusion.py  install.py  pyproject.toml  启动器-换脸 - 副本.bat  启动器-直播 - 副本.bat
facefusion/: app_context.py  args.py  audio.py  benchmarker.py  camera_manager.py  choices.py  cli_helper.py  common_helper.py  config.py  content_analyser.py  core.py  curl_builder.py  download.py  execution.py  exit_helper.py  face_analyser.py  face_classifier.py  face_detector.py  face_helper.py  face_landmarker.py  face_masker.py  face_recognizer.py  face_selector.py  face_store.py  ffmpeg.py  ffmpeg_builder.py  filesystem.py  hash_helper.py  inference_manager.py  installer.py  json.py  logger.py  memory.py  metadata.py  model_helper.py  normalizer.py  obs_integration.py  process_manager.py  program.py  program_helper.py  (+10 more)
tests/: helper.py  test_audio.py  test_cli_age_modifier.py  test_cli_batch_runner.py  test_cli_expression_restorer.py  test_cli_face_debugger.py  test_cli_face_editor.py  test_cli_face_enhancer.py  test_cli_face_swapper.py  test_cli_frame_colorizer.py  test_cli_frame_enhancer.py  test_cli_job_manager.py  test_cli_job_runner.py  test_cli_lip_syncer.py  test_cli_output_scale.py  test_common_helper.py  test_config.py  test_curl_builder.py  test_download.py  test_execution.py  test_face_analyser.py  test_ffmpeg.py  test_ffmpeg_builder.py  test_filesystem.py  test_inference_manager.py  test_job_helper.py  test_job_list.py  test_job_manager.py  test_job_runner.py  test_json.py  test_memory.py  test_normalizer.py  test_process_manager.py  (+6 more)
(+72 files in other folders)
