[project]
name = "cfai-facefusion"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.11.*"
dependencies = [
    "gradio>=5.49.1",
    "gradio-rangeslider>=0.0.8",
    "numpy>=2.3.4",
    "onnx>=1.19.1",
    "onnxruntime>=1.23.2",
    "onnxruntime-gpu>=1.23.2",
    "opencv-python>=4.11.0.86",
    "psutil>=7.1.3",
    "scipy>=1.16.3",
    "tqdm>=4.67.1",
    "pyfiglet>=1.0.4",
    "obsws-python>=1.8.0",
]

[dependency-groups]
dev = [
    "ipdb>=0.13.13",
    "ipython>=9.7.0",
]

